--- a/webapp/index.html
+++ b/webapp/index.html
@@ -5,11 +5,11 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<title>wasteStatsApp</title>
+		<title>Waste Stats App</title>
 
 		<script id="sap-ui-bootstrap"
 			src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
-			data-sap-ui-theme="sap_belize"
+			data-sap-ui-theme="sap_fiori_3_dark"
 			data-sap-ui-resourceroots='{
 				"com.fidschenberger.wasteStatsApp": "./"
 			}'
