--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,27 +1,37 @@
 <!DOCTYPE HTML>
 <html>
 
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<title>Waste Stats App</title>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.bundle.min.js"></script>
-		<script id="sap-ui-bootstrap"
-			src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
-			data-sap-ui-theme="sap_fiori_3_dark"
-			data-sap-ui-resourceroots='{
+	<!-- PWA manifest -->
+	<link rel="manifest" href="manifest.webmanifest">
+	<!-- Add to home screen for Safari on iOS -->
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black">
+	<meta name="apple-mobile-web-app-title" content="My Waste Stats">
+	<link rel="apple-touch-icon" href="icons/icon-300.png">
+	<!-- Windows related -->
+	<meta name="msapplication-TileImage" content="icons/icon-300.png">
+	<meta name="msapplication-TileColor" content="#386CC1">
+	<meta name="theme-color" content="#164391">
+	<!-- Register Service Worker-->
+	<script src="register-service-worker.js"></script>
+
+	<title>Waste Stats App</title>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.bundle.min.js"></script>
+	<script id="sap-ui-bootstrap" src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
+		data-sap-ui-theme="sap_fiori_3_dark" data-sap-ui-resourceroots='{
 				"com.fidschenberger.wasteStatsApp": "./"
-			}'
-			data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
-			data-sap-ui-compatVersion="edge"
-			data-sap-ui-async="true"
-			data-sap-ui-frameOptions="trusted">
+			}' data-sap-ui-oninit="module:sap/ui/core/ComponentSupport" data-sap-ui-compatVersion="edge"
+		data-sap-ui-async="true" data-sap-ui-frameOptions="trusted">
 		</script>
-	</head>
+</head>
 
-	<body class="sapUiBody">
-		<div data-sap-ui-component data-name="com.fidschenberger.wasteStatsApp" data-id="container" data-settings='{"id" : "wasteStatsApp"}'></div>
-	</body>
+<body class="sapUiBody">
+	<div data-sap-ui-component data-name="com.fidschenberger.wasteStatsApp" data-id="container"
+		data-settings='{"id" : "wasteStatsApp"}'></div>
+</body>
 
 </html>
