added indexedDB support

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -17,15 +17,20 @@
 	<meta name="msapplication-TileColor" content="#386CC1">
 	<meta name="theme-color" content="#164391">
 	<!-- Register Service Worker-->
-	<script src="register-service-worker.js"></script>
+	<!-- <script src="register-service-worker.js"></script> -->
 
 	<title>Waste Stats App</title>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.bundle.min.js"></script>
-	<script id="sap-ui-bootstrap" src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
-		data-sap-ui-theme="sap_fiori_3_dark" data-sap-ui-resourceroots='{
+	<script id="sap-ui-bootstrap" 
+		src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
+		data-sap-ui-theme="sap_fiori_3_dark" 
+		data-sap-ui-resourceroots='{
 				"com.fidschenberger.wasteStatsApp": "./"
-			}' data-sap-ui-oninit="module:sap/ui/core/ComponentSupport" data-sap-ui-compatVersion="edge"
-		data-sap-ui-async="true" data-sap-ui-frameOptions="trusted">
+		}' 
+		data-sap-ui-oninit="module:sap/ui/core/ComponentSupport" 
+		data-sap-ui-compatVersion="edge"
+		data-sap-ui-async="true" 
+		data-sap-ui-frameOptions="trusted"
+		data-sap-ui-logLevel="info">
 		</script>
 </head>
 
