auth0 seems to be working

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -17,7 +17,7 @@
 	<meta name="msapplication-TileColor" content="#386CC1">
 	<meta name="theme-color" content="#164391">
 	<!-- Register Service Worker-->
-	<!-- <script src="register-service-worker.js"></script> -->
+	<script src="register-service-worker.js"></script>
 
 	<title>Waste Stats App</title>
 	<script id="sap-ui-bootstrap" 
