fixed data loading

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -19,7 +19,7 @@
 	<!-- Register Service Worker-->
 	<script src="register-service-worker.js"></script>
 
-	<title>Waste Stats App</title>
+	<title>Trasta App</title>
 	<script id="sap-ui-bootstrap" 
 		src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
 		data-sap-ui-theme="sap_fiori_3_dark" 
