--- a/webapp/test/testsuite.qunit.html
+++ b/webapp/test/testsuite.qunit.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>QUnit test suite for Worklist</title>
-	<script src="../resources/sap/ui/qunit/qunit-redirect.js"></script>
-	<script src="testsuite.qunit.js" data-sap-ui-testsuite></script>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta charset="utf-8">
+	<title>QUnit test suite for Trasta</title>
+	<script src="../resources/sap/ui/qunit/qunit-redirect.js" 
+		data-sap-ui-testsuite="testsuite.qunit"></script>
 </head>
+
 <body>
 </body>
+
 </html>
