refactored resource roots path, increased build time

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -24,7 +24,7 @@
 		src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
 		data-sap-ui-theme="sap_fiori_3_dark" 
 		data-sap-ui-resourceroots='{
-				"com.fidschenberger.wasteStatsApp": "./"
+				"com.fidschenberger.trasta": "./"
 		}' 
 		data-sap-ui-oninit="module:sap/ui/core/ComponentSupport" 
 		data-sap-ui-compatVersion="edge"
@@ -35,8 +35,8 @@
 </head>
 
 <body class="sapUiBody">
-	<div data-sap-ui-component data-name="com.fidschenberger.wasteStatsApp" data-id="container"
-		data-settings='{"id" : "wasteStatsApp"}'></div>
+	<div data-sap-ui-component data-name="com.fidschenberger.trasta" data-id="container"
+		data-settings='{"id" : "trasta"}'></div>
 </body>
 
 </html>
