--- a/webapp/test/integration/opaTests.qunit.html
+++ b/webapp/test/integration/opaTests.qunit.html
@@ -8,7 +8,7 @@
 		src="../../resources/sap-ui-core.js"
 		data-sap-ui-theme='sap_belize'
 		data-sap-ui-resourceroots='{
-			"com.fidschenberger.wasteStatsApp": "../../"
+			"com.fidschenberger.trasta": "../../"
 		}'
 		data-sap-ui-language="EN"
 		data-sap-ui-animation="false"
