--- a/webapp/test/unit/unitTests.qunit.html
+++ b/webapp/test/unit/unitTests.qunit.html
@@ -8,7 +8,7 @@
 		src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
 		data-sap-ui-theme="sap_fiori_3_dark"
 		data-sap-ui-resourceroots='{
-			"com.fidschenberger.wasteStatsApp": "../../"
+			"com.fidschenberger.trasta": "../../"
 		}'
 		data-sap-ui-language="EN"
 		data-sap-ui-async="true">
